Fixed alert modals z-index

--- a/dev/sass/App.sass
+++ b/dev/sass/App.sass
@@ -370,7 +370,7 @@
   position: fixed
   top: 0
   left: 0
-  z-index: 5001
+  z-index: 1000
   overflow-x: hidden
   background-color: #eee
 
@@ -1241,10 +1241,7 @@
   margin: 0 auto
 
 #settings-modal
-  z-index: 10000
-
-.swal2-container
-  z-index: 10001
+  z-index: 1001
 
 #settings-modal .modal-body
   padding: 0
@@ -1321,7 +1318,7 @@
 
 .drop-container
   position: relative
-  z-index: 1000
+  z-index: 997
   // transform: translateY(50%)
   // margin: auto
   // width: 500px
@@ -1427,7 +1424,7 @@
   right: 0
   top: 50%
   width: 93%
-  z-index: 1001
+  z-index: 998
   transform: translateY(-50%)
   margin: auto
   opacity: 1
